@@ -1,9 +1,11 @@
 package edu.wpi.u.controllers.login;
 
+
 import com.fasterxml.jackson.databind.util.JSONPObject;
 import com.google.gson.GsonBuilder;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParser;
+import com.jfoenix.validation.RequiredFieldValidator;
 import edu.wpi.u.App;
 import com.jfoenix.controls.JFXButton;
 import com.jfoenix.controls.JFXPasswordField;
@@ -38,6 +40,7 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.lang.reflect.Type;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Locale;
@@ -47,17 +50,43 @@ import static spark.Spark.*;
 import com.google.gson.Gson;
 
 import javafx.concurrent.Worker.State;
+import java.sql.SQLOutput;
+
+import static edu.wpi.u.users.StaffType.*;
 
 public class LoginController {
 
+
+    // TODO: Properly rename JFX artifacts
     @FXML
-    public JFXTextField accountName;
-    public JFXPasswordField passWord;
-    public JFXButton login;
+    public JFXTextField userNameTextField;
+    @FXML
+    public JFXPasswordField passWordField;
+    @FXML
+    public JFXButton loginButton;
+    @FXML
     public JFXButton forgotPasswordButton;
 
+    public void initialize() throws IOException {
 
-    public boolean authenticated;
+        RequiredFieldValidator validator = new RequiredFieldValidator();
+        validator.setMessage("Username Required");
+        userNameTextField.getValidators().add(validator);
+        userNameTextField.focusedProperty().addListener((o, oldVal, newVal) -> {
+            if (!newVal) {
+                userNameTextField.validate();
+            }
+        });
+
+        RequiredFieldValidator validator2 = new RequiredFieldValidator();
+        validator2.setMessage("Password Required");
+        passWordField.getValidators().add(validator2);
+        passWordField.focusedProperty().addListener((o, oldVal, newVal) -> {
+            if (!newVal) {
+                passWordField.validate();
+            }
+        });
+    }
 
     // This function, upon handling login button, will check the accountName and passWord
     // against the database, if this works, the user will be taken to the application, if not
@@ -66,6 +95,7 @@ public class LoginController {
 
 
     @FXML
+
     public void handleLogin() throws IOException {
 //        get("http://localhost:3000/getstatus", (request,response) -> {
 //            System.out.println("Here in post");
@@ -90,80 +120,106 @@ public class LoginController {
 //            return response;
 //        });
 
-        String username = accountName.getText();
-        String password = passWord.getText();
+        String username = userNameTextField.getText();
+        String password = passWordField.getText();
         //TODO: Stop from switching windows
         try {
             if (!App.userService.checkUsername(username).equals("")) {
                 if (!App.userService.checkPassword(password).equals("")) {
                     App.userService.setUser(username, password, App.userService.checkPassword(password));
 
-                    WebView webView = new WebView();
-                    webView.setCache(true);
-                    WebEngine webEngine = webView.getEngine();
-                    webEngine.getLoadWorker().stateProperty().addListener((observable, oldState, newState) -> {
-                        if (newState == State.SUCCEEDED) {
-                            App.getPrimaryStage().setTitle(webEngine.getLocation());
-                            Document doc = webEngine.getDocument();
-                            EventListener listener = ev -> {
-                                System.out.println("Event triggered and fetching status " + ev.getTimeStamp());
-                                String status = " ";
-                                try{
-                                    URL url = new URL("https://bw-webapp.herokuapp.com/getstatus"); // make GET request
+                        String status;
+                                try {
+                                    URI uri = new URI("https://bw-webapp.herokuapp.com/login");
+                                    String query = uri.getQuery();
+                                    if (query == null){
+
+                                    }
+
+                                    URL url = new URL(); // make GET request
                                     HttpURLConnection con = (HttpURLConnection) url.openConnection();
                                     con.setRequestMethod("GET");
                                     con.setRequestProperty("Content-Type", "application/json");
                                     BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
                                     String inputLine;
                                     StringBuffer content = new StringBuffer();
-                                    while ((inputLine = in.readLine()) != null){
+                                    while ((inputLine = in.readLine()) != null) {
                                         content.append(inputLine);
                                     }
                                     in.close();
-                                    webEngine.reload();
                                     Gson gson = new GsonBuilder().setPrettyPrinting().create();
                                     System.out.println("Content: " + content);
                                     JsonObject obj = new Gson().fromJson(String.valueOf(content), JsonObject.class);
                                     System.out.println("JSON Object: " + obj);
                                     status = obj.get("status").toString(); // "approved" or "pending"
                                     System.out.println("Status from get: " + status);
-                                }
-                                catch (Exception e){
+                                } catch (Exception e) {
                                     e.printStackTrace();
                                 }
-
-                                doc.getElementById("statusLabel").setTextContent("Token verified");
-                                // TODO : Token status is received at this point
-                                status = status.replaceAll("^\"|\"$", "");
-                                if (status.equals("approved")){
-                                    System.out.println("Token approved");
-                                    doc.getElementById("statusLabel").setTextContent("Token verified");
-                                    // TODO : Add a sexier scene switch here
-                                    Parent root = null;
-                                    try {
-                                        root = FXMLLoader.load(getClass().getResource("/edu/wpi/u/views/NewMainPage.fxml"));
-                                    } catch (IOException e) {
-                                        e.printStackTrace();
-                                    }
-                                    Scene scene = new Scene(root);
-                                    App.getPrimaryStage().setScene(scene);
-                                }
-                                else if (status.equals("pending")){
-                                    System.out.println("Token denied");
-                                    doc.getElementById("statusLabel").setTextContent("Token denied");
-                                    // DO nothing, wait for correct input
-                                }
-                            };
-                            Element el = doc.getElementById("enterApp");
-                            ((EventTarget) el).addEventListener("click", listener, false);
-
-                            EventListener listener2 = ev -> {
-                                webEngine.executeScript("enterToken()");
-                            };
-                            Element el2 = doc.getElementById("tokenSubmit");
-                            ((EventTarget) el2).addEventListener("click", listener2, false);
-                        }
-                    });
+//                    WebView webView = new WebView();
+//                    webView.setCache(true);
+//                    WebEngine webEngine = webView.getEngine();
+//                    webEngine.getLoadWorker().stateProperty().addListener((observable, oldState, newState) -> {
+//                        if (newState == State.SUCCEEDED) {
+//                            App.getPrimaryStage().setTitle(webEngine.getLocation());
+//                            Document doc = webEngine.getDocument();
+//                            EventListener listener = ev -> {
+//                                System.out.println("Event triggered and fetching status " + ev.getTimeStamp());
+//                                String status = " ";
+//                                try {
+//                                    URL url = new URL("https://bw-webapp.herokuapp.com/getstatus"); // make GET request
+//                                    HttpURLConnection con = (HttpURLConnection) url.openConnection();
+//                                    con.setRequestMethod("GET");
+//                                    con.setRequestProperty("Content-Type", "application/json");
+//                                    BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
+//                                    String inputLine;
+//                                    StringBuffer content = new StringBuffer();
+//                                    while ((inputLine = in.readLine()) != null) {
+//                                        content.append(inputLine);
+//                                    }
+//                                    in.close();
+//                                    webEngine.reload();
+//                                    Gson gson = new GsonBuilder().setPrettyPrinting().create();
+//                                    System.out.println("Content: " + content);
+//                                    JsonObject obj = new Gson().fromJson(String.valueOf(content), JsonObject.class);
+//                                    System.out.println("JSON Object: " + obj);
+//                                    status = obj.get("status").toString(); // "approved" or "pending"
+//                                    System.out.println("Status from get: " + status);
+//                                } catch (Exception e) {
+//                                    e.printStackTrace();
+//                                }
+//
+//                                doc.getElementById("statusLabel").setTextContent("Token verified");
+//                                // TODO : Token status is received at this point
+//                                status = status.replaceAll("^\"|\"$", "");
+//                                if (status.equals("approved")) {
+//                                    System.out.println("Token approved");
+//                                    doc.getElementById("statusLabel").setTextContent("Token verified");
+//                                    // TODO : Add a sexier scene switch here
+//                                    Parent root = null;
+//                                    try {
+//                                        root = FXMLLoader.load(getClass().getResource("/edu/wpi/u/views/NewMainPage.fxml"));
+//                                    } catch (IOException e) {
+//                                        e.printStackTrace();
+//                                    }
+//                                    Scene scene = new Scene(root);
+//                                    App.getPrimaryStage().setScene(scene);
+//                                } else if (status.equals("pending")) {
+//                                    System.out.println("Token denied");
+//                                    doc.getElementById("statusLabel").setTextContent("Token denied");
+//                                    // DO nothing, wait for correct input
+//                                }
+//                            };
+//                            Element el = doc.getElementById("enterApp");
+//                            ((EventTarget) el).addEventListener("click", listener, false);
+//
+//                            EventListener listener2 = ev -> {
+//                                webEngine.executeScript("enterToken()");
+//                            };
+//                            Element el2 = doc.getElementById("tokenSubmit");
+//                            ((EventTarget) el2).addEventListener("click", listener2, false);
+//                        }
+//                    });
                     webEngine.load("https://bw-webapp.herokuapp.com/");
                     webEngine.setJavaScriptEnabled(true);
                     VBox vBox = new VBox(webView);
@@ -176,23 +232,21 @@ public class LoginController {
             } else {
                 throw new AccountNameNotFoundException();
             }
-        } catch (Exception e) {
-            AccountNameNotFoundException accountException = new AccountNameNotFoundException();
-            accountException.description = username + " not found in system.";
-            PasswordNotFoundException passwordException = new PasswordNotFoundException();
-            passwordException.description = password + " not associated with account. Check username or click Forgot Password.";
+        } catch (AccountNameNotFoundException | PasswordNotFoundException e) {
+            e.printStackTrace();
         }
     }
+
 //Throws exceptions if username or password not found
+        public void handleForgotPassword() throws IOException {
+            //switch scene
+            Parent root = FXMLLoader.load(getClass().getResource("/edu/wpi/u/views/ForgotPassword.fxml"));
+//                    Scene scene = new Scene(root);
+            App.getPrimaryStage().getScene().setRoot(root);
+        }
 
-    public void handleLogin(JFXTextField accountName, JFXPasswordField passWord){
-
-    }
-
-    public  void handleForgotPassword(){
-
-
-    }
 }
+
+
 
 
